<resources>
    <string name="app_name">Just The Tip</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="bill_amount_label">Bill Amount:</string>
    <string name="pct_label">Percent:</string>
    <string name="tip_label">Tip:</string>
    <string name="total_label">Total:</string>
    <string name="pct_up">+</string>
    <string name="pct_minus">-</string>
    <string name="reset">RESET</string>
    <string name="pct">15%</string>
    <string name="tip">0.00</string>
    <string name="total">0.00</string>
    <string name="rounding_label">Rounding</string>
    <string name="none_radio_button">None</string>
    <string name="tip_radio_button">Tip</string>
    <string name="total_radio_button">Total</string>

    <string-array name="array_split">
        <item>No</item>
        <item>2 Ways</item>
        <item>3 Ways</item>
        <item>4 Ways</item>
    </string-array>
</resources>
